--- a/src/app/auth/proposals/company-internship-proposals-list/company-internship-proposals-list.component.html
+++ b/src/app/auth/proposals/company-internship-proposals-list/company-internship-proposals-list.component.html
@@ -4,8 +4,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>Dictionary.OwnInternships</h4>
-                        <p class="category" translate>Pages.InternshipOwnCompany.SubTitle</p>
+                        <h4 class="card-title" translate>Pages.CompanyInternshipProposals.Title</h4>
+                        <p class="category" translate>Pages.CompanyInternshipProposals.SubTitle</p>
                     </div>
                     <div class="card-content table-responsive table-full-width">
                         <table class="table">
@@ -30,19 +30,21 @@
                                     </td>
                                 </tr>
                                 <tr *ngFor="let row of internshipTable.dataRows">
-                                    <td class="td-actions text-center">
-                                        <a *ngIf="row.status === InternshipStatusType.NotApproved" rel="tooltip" title="{{'Dictionary.Edit' | translate}}" [routerLink]="'/auth/internships/edit/' + row.id"
-                                            class="btn btn-primary btn-simple btn-xs">
-                                            <i class="ti-pencil"></i>
+                                    <td class="td-actions text-center" *ngIf="row.status === InternshipProposalStatusType.WaitingForCompany">
+                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/proposals/approve/' + row.id" class="btn btn-primary btn-simple btn-xs">
+                                            <i class="fas fa-eye"></i>
                                         </a>
-                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/internships/details/' + row.id" class="btn btn-primary btn-simple btn-xs">
+                                    </td>
+                                    <td class="td-actions text-center" *ngIf="row.status !== InternshipProposalStatusType.WaitingForCompany">
+                                        <a rel="tooltip" title="{{'Dictionary.Details' | translate}}" [routerLink]="'/auth/proposals/details/' + row.id" class="btn btn-primary btn-simple btn-xs">
                                             <i class="fas fa-eye"></i>
                                         </a>
                                     </td>
                                     <td *ngFor="let col of internshipTable.headerRow; let colIndex = index" class="{{col.class || ''}}">
-                                        <span *ngIf="col.formatter && col.translate">{{col.formatter(val(row,col.value),col,row) | translate}}</span>
-                                        <span *ngIf="col.formatter && !col.translate">{{col.formatter(val(row,col.value))}}</span>
-                                        <span *ngIf="!col.formatter">{{val(row,col.value) | tablecol:col.pipe}}</span>
+                                        <span *ngIf="!col.formatter && !col.translate">{{val(row,col.value) | tablecol:col.pipe}}</span>
+                                        <span *ngIf="!col.formatter && col.translate">{{val(row,col.value) | tablecol:col.pipe | translate}}</span>
+                                        <span *ngIf="col.formatter && !col.translate">{{col.formatter(val(row,col.value)) | tablecol:col.pipe}}</span>
+                                        <span *ngIf="col.formatter && col.translate">{{col.formatter(val(row,col.value)) | tablecol:col.pipe | translate}}</span>
                                     </td>
                                 </tr>
                             </tbody>
