Add ngx-datatable instead of datatable

--- a/src/app/auth/internships/approve-list/internships-approve-list.component.html
+++ b/src/app/auth/internships/approve-list/internships-approve-list.component.html
@@ -2,7 +2,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="card">
+                    <grid-cmp [rows]="rows" [allRows]="rows" [columns]="columns"></grid-cmp>
+<!--                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>Pages.InternshipApproveList.Title</h4>
                         <p class="category" translate>Pages.InternshipApproveList.SubTitle</p>
@@ -42,7 +43,7 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
