--- a/src/app/auth/internships/view/internships-view.component.html
+++ b/src/app/auth/internships/view/internships-view.component.html
@@ -2,7 +2,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="card">
+
+                <grid-cmp [rows]="rows" [allRows]="rows" [columns]="columns"></grid-cmp>
+
+                <!-- <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>Pages.InternshipOffers.Title</h4>
                         <p class="category" translate>Pages.InternshipOffers.SubTitle</p>
@@ -42,7 +45,7 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
