--- a/src/app/auth/proposals/company-internship-proposals-list/company-internship-proposals-list.component.html
+++ b/src/app/auth/proposals/company-internship-proposals-list/company-internship-proposals-list.component.html
@@ -2,7 +2,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="card">
+                <grid-cmp [rows]="rows" [allRows]="rows" [columns]="columns"></grid-cmp>
+
+                <ng-template #statusTemplate let-row="row" let-value="value">
+                    <span>{{('Enums.InternshipProposalStatusType.' + InternshipProposalStatusType[value]) | translate}}</span>
+                </ng-template>
+                <!-- <div class="card">
                     <div class="card-header">
                         <h4 class="card-title" translate>Pages.CompanyInternshipProposals.Title</h4>
                         <p class="category" translate>Pages.CompanyInternshipProposals.SubTitle</p>
@@ -50,7 +55,7 @@
                             </tbody>
                         </table>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
