Migrate to Angular 6 and rxjs 6.2

--- a/src/app/auth/internships/add/internship-add.component.html
+++ b/src/app/auth/internships/add/internship-add.component.html
@@ -4,8 +4,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Pages.InternshipAdd.Title
+                        <h4 class="card-title">
+                            {{'Pages.InternshipAdd.Title' | translate }}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -19,8 +19,8 @@
                 </div>
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Address
+                        <h4 class="card-title">
+                            {{'Dictionary.Address' | translate }}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -72,8 +72,8 @@
 
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Details
+                        <h4 class="card-title">
+                            {{'Dictionary.Details' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -118,7 +118,7 @@
                 <div class="card">
                     <div class="card-content">
                         <div>
-                            <button type="button" class="btn btn-default" [routerLink]="'/auth/internships/list'" translate>Dictionary.Cancel</button>
+                            <button type="button" class="btn btn-default" [routerLink]="'/auth/internships/offers'" translate>Dictionary.Cancel</button>
                             <button type="button" class="btn btn-success pull-right" (click)="save()" translate>Dictionary.Save</button>
                         </div>
                     </div>
