--- a/src/app/auth/internships/approve/internship-approve.component.html
+++ b/src/app/auth/internships/approve/internship-approve.component.html
@@ -4,10 +4,12 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Pages.InternshipApprove.Title
+                        <h4 class="card-title">
+                            {{'Pages.InternshipApprove.Title' | translate}}
                         </h4>
-                        <p class="category" translate>Pages.InternshipApprove.SubTitle</p>
+                        <p class="category">
+                            {{'Pages.InternshipApprove.SubTitle' | translate}}
+                        </p>
                     </div>
                     <div class="card-content">
                         <div class="form-group">
@@ -18,8 +20,8 @@
                 </div>
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Status
+                        <h4 class="card-title">
+                            {{'Dictionary.Status' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -40,8 +42,8 @@
                 </div>
                 <div class="card" *ngIf="internship">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Details
+                        <h4 class="card-title">
+                            {{'Dictionary.Details' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
