--- a/src/app/auth/proposals/approve/internship-proposal-approve.component.html
+++ b/src/app/auth/proposals/approve/internship-proposal-approve.component.html
@@ -4,8 +4,8 @@
             <div class="col-md-10 col-md-offset-1">
                 <div class="card" *ngIf="internshipProposal">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Pages.InternshipProposalApprove.Title
+                        <h4 class="card-title">
+                            {{'Pages.InternshipProposalApprove.Title' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -25,8 +25,8 @@
                 </div>
                 <div class="card" *ngIf="internshipProposal">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Status
+                        <h4 class="card-title">
+                            {{'Dictionary.Status' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
@@ -49,8 +49,8 @@
                 </div>
                 <div class="card" *ngIf="internshipProposal">
                     <div class="card-header">
-                        <h4 class="card-title" translate>
-                            Dictionary.Details
+                        <h4 class="card-title">
+                            {{'Dictionary.Details' | translate}}
                         </h4>
                     </div>
                     <div class="card-content">
