--- a/src/app/shared/index/index.component.html
+++ b/src/app/shared/index/index.component.html
@@ -12,8 +12,8 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a [routerLink]="['/login']" class="btn" translate>
-                        Pages.Index.LookingForLogin
+                    <a [routerLink]="['/login']" class="btn">
+                        {{'Pages.Index.LookingForLogin' | translate}}
                     </a>
                 </li>
                 <li>
@@ -36,8 +36,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="header-text">
-                            <h2 translate>Pages.Index.Title</h2>
-                            <h4 translate>Pages.Index.SubTitle</h4>
+                            <h2>{{'Pages.Index.Title' | translate}}</h2>
+                            <h4>{{'Pages.Index.SubTitle' | translate}}</h4>
                             <hr>
                         </div>
                     </div>
@@ -49,9 +49,9 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5 translate [routerLink]="['/login']">Pages.Index.Sections.0.Title</h5>
-                                <div translate>
-                                    Pages.Index.Sections.0.SubTitle
+                                <h5 [routerLink]="['/login']">{{'Pages.Index.Sections.0.Title'|translate}}</h5>
+                                <div>
+                                    {{'Pages.Index.Sections.0.SubTitle' | translate}}
                                 </div>
                             </div>
                         </div>
@@ -62,9 +62,9 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5 translate [routerLink]="['/login/company']">Pages.Index.Sections.1.Title</h5>
-                                <div translate>
-                                    Pages.Index.Sections.1.SubTitle
+                                <h5 [routerLink]="['/login/company']">{{'Pages.Index.Sections.1.Title' | translate}}</h5>
+                                <div>
+                                    {{'Pages.Index.Sections.1.SubTitle' | translate}}
                                 </div>
                                 <a [routerLink]="['/register']">Crea subito un nuovo account!</a>
                             </div>
@@ -76,9 +76,9 @@
                                 </div>
                             </div>
                             <div class="media-body">
-                                <h5 translate>Pages.Index.Sections.2.Title</h5>
-                                <div translate>
-                                    Pages.Index.Sections.2.SubTitle
+                                <h5>{{'Pages.Index.Sections.2.Title' | translate}}</h5>
+                                <div>
+                                    {{'Pages.Index.Sections.0.SubTitle' | translate}}
                                 </div>
                             </div>
                         </div>
